@@ -1,3 +1,9 @@
+2000-03-21  Kai Habel <kahacjde@calvados.zrz.TU-Berlin.DE>
+
+	* image/saveimage.m: Swap black and white colormaps so zero is
+	displayed as black and 1 is displayed as white.
+	Fix indexing bug in ppm case.
+
 2000-03-06  Stephen Eglen  <stephen@anc.ed.ac.uk>
 
 	* statistics/tests/kolmogorov_smirnov_test_2.m: Account for ties
